wip: navbar collapsed and fixed

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ main section {
   margin: 0 auto;
   margin-bottom: 50px;
   max-width: 1200px;
+  width: 100%;
 }
 
 main section {
